--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,5 +1,4 @@
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
     font-family: 'JetBrainsMono Nerd Font', sans-serif;
     font-size: 13px;
     color: #efefef;
@@ -11,7 +10,8 @@ window#waybar {
 
 widget {
     border-radius: 10px;
-    background-color: rgba(0x22, 0x55, 0x22, 1);
+    background-color: #2c2c2c;
+    border: 1px solid #1c1c1c;
 }
 
 label.module {
@@ -19,13 +19,8 @@ label.module {
 }
 
 button {
-    box-shadow: inset 0 -3px transparent;
-    border: none;
-}
-
-button:hover {
-    background: inherit;
-    box-shadow: inset 0px -10px rgba(0x2c, 0x2c, 0x2c, 0.25);
+    border-radius: 10px;
+    transition: background 0.2s ease;
 }
 
 #workspaces button {
@@ -33,6 +28,5 @@ button:hover {
 }
 
 #workspaces button.active {
-    background-color: #A84260;
+    background-color: rgba(0xb2, 0x21, 0x18, 1);
 }
-
